Rename tests directory

--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
       "react-app"
     ]
   },
+  "jest": {
+    "testMatch": ["**/tests/**/*.js?(x)"]
+  },
   "standard": {
     "env": {
       "jest": true
