--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-classifier",
-  "version": "0.1.0",
-  "description": "",
+  "version": "0.2.0",
+  "description": "Add classes to a tree of React elements with a tree of CSS-like selectors",
   "license": "MIT",
   "author": {
     "name": "Alejandro Peinó",
@@ -21,7 +21,6 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-lodash": "^3.3.2",
     "babel-preset-react-app": "^3.1.0",
-    "bill": "^3.2.6",
     "classnames": "^2.2.5",
     "jest": "^22.0.4",
     "lodash": "^4.17.4",
@@ -43,9 +42,6 @@
     "presets": [
       "react-app"
     ]
-  },
-  "jest": {
-    "testMatch": ["**/tests/**/*.js?(x)"]
   },
   "standard": {
     "env": {
