--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "keywords": [
     "React"
   ],
+  "files": [
+    "dist"
+  ],
   "main": "dist/index.js",
   "devDependencies": {
     "babel-core": "^6.26.0",
